--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="input_text_placeholder">Введите message для hash функции</string>
     <string name="calculate_button_text">Рассчитать скорость функции</string>
     <string name="current_service">Действующий сервис</string>
+    <string name="current_multiplier">Действующий множитель</string>
+    <string name="multiplier_value">Множитель равен: %1$s </string>
+    <string name="count_elements">Количество символов: %1$s </string>
 </resources>
