--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="cpp_name">C++</string>
     <string name="kotlin_name">Kotlin</string>
     <string name="kotlin_and_cpp_name">Kotlin &amp; C++</string>
+    <string name="logo">Логотип</string>
 </resources>
